debugging the callablestatement